# Cinema-React-Docker

./: README.md  docker-compose.yaml  schema_creation.sql
api/: Dockerfile  log_conf.yaml  main.py  pyproject.toml  schema_init.py  update_status.py
api/config/: __init__.py  cassandra.py
api/db/cassandra/: __init__.py  dependency.py  pool.py  pool_item.py
api/db/cities/: __init__.py  city.py  city_manager.py  dependency.py
api/db/film/: __init__.py  cinema.py  cinemas_by_film.py  film.py  film_manager.py
api/db/timeslots/: __init__.py  exceptions.py  seat.py  seat_book_manager.py  seat_info_manager.py  times_by_cinema_film.py  timeslot.py
api/db/user/: __init__.py  user_books.py  user_manager.py
api/routers/: cinemas.py  debug.py  seats.py  users.py
web/: .env  package-lock.json  package.json
web/src/: App.css  App.tsx
web/src/components/advertising/: index.css  index.tsx
web/src/components/footer/: index.css  index.tsx
web/src/components/header/: index.css  index.tsx
web/src/components/main/: index.css  index.tsx
web/src/components/selectSeats/: index.css  index.tsx
web/src/components/selectValues/: index.css  index.tsx
web/src/services/: index.ts
web/src/types/: index.ts
