[tool.poetry]
name = "ork-cinema-api"
version = "0.1.0"
description = ""
authors = ["Fiodar Piatrovich"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
cassandra-driver = "^3.29.1"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
